--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -140,7 +140,7 @@ jobs:
 
     strategy:
       matrix:
-        VERSION: [21.02, 23.05]
+        VERSION: [23.05]
         CPU: [rk3328, rk3399, rk3568, rk3588]
         SET: [docker, non-docker]
     steps:
