--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,7 +31,7 @@ jobs:
     strategy:
       matrix:
         VERSION: [23.05]
-        SET: [docker, non-docker]
+        SET: [non-docker]
 
     steps:
     - name: Checkout
@@ -142,7 +142,7 @@ jobs:
       matrix:
         VERSION: [23.05]
         CPU: [rk3328, rk3399, rk3568, rk3588]
-        SET: [docker, non-docker]
+        SET: [non-docker]
     steps:
     - name: Checkout
       uses: actions/checkout@main
